PTXprint 1.7.9 Release Notes 
21 May 2021

"Bible Layout For Everyone" - Easily create scripture PDFs for trial publications

NOTE: The child markers of \f and \x now follow the settings of their parent marker styles.
      As a result there may be changes in the way footnotes and cross-references appear.
	  It is recommended that your reset these styles to use the default settings prior
	  to trying to remedy settings manually.
	  
Bug fixes and Improvements in 1.8

  * Added new feature to include cross-references from external lists in centre column
  
  * Fix centring header centre when marginal verses
  
  * Provide more context in error messages to help track issues better
  
  * Add bridgeVerses macro enabling on-the-fly bridged verses (useful for marginal verses)
  
  * Ensure .triggers files are included in .zip archives

Bug fixes and Improvements in 1.7.9

  * Show flattened module in Final SFM tab when typesetting a module
  
  * Fixed not showing chapter numbers in single chapter books

  * #447 Add \CalcChapSizefalse to force user-specified chapter size and raise
    rather than auto-calculated values
  
WARNING: For those using RTL scripts:
     The TeX macros have been changed for RTL for Right and Left Justification 
     such that they are swapped. This means that you no longer have to swap the 
     Right and Left Justifications on markers like \q. If justification is Left, 
     it will be Right-justified. PTXprint *should* update your styles automatically.		 

NOTE: For those previously using various Border and Grid PDFs as watermarks:
     There is now a better system for Guides and Grids (see Layout page), so the
	 various Border and Grid PDFs have been removed from the Watermark PDFassets.
	 Also note that the 'Crop Marks' option still exists, but on the Advanced tab.

Bug fixes in 1.7.2

  * Fix bug in PicList generation for USFM3 files

Bug fixes in 1.7.1

  * TypeError bug fix for Style editor

Bug fixes and Improvements in 1.7
