@@ -1,5 +1,5 @@
 PTXprint 1.7.9 Release Notes 
-21 May 2021
+22 May 2021
 
 "Bible Layout For Everyone" - Easily create scripture PDFs for trial publications
 
@@ -11,6 +11,8 @@ NOTE: The child markers of \f and \x now follow the settings of their parent mar
 Bug fixes and Improvements in 1.8
 
   * Added new feature to include cross-references from external lists in centre column
+  
+  * Fix bug which caused modules with spaces in their name to create an unopenable PDF
   
   * Fix centring header centre when marginal verses
   
